infra/modules/networking/security-groups.tf
resource "aws_security_group" "default" {
  name   = "${var.project_name}-default-sg"
  vpc_id = aws_vpc.this.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
